# episquad

./: flake.nix  pyproject.toml
episquad/: add_groups_command.py  add_perms_command.py  add_user_command.py  bot.py  classes_utils.py  command_utils.py  console.py  data.py  date_utils.py  day_command.py  eat_command.py  fetch_command.py  find_command.py  help_command.py  lines_command.py  list_users_command.py  main.py  permissions.py  ping_command.py  remove_groups_command.py  remove_perms_command.py  remove_user_command.py  repo_command.py  suggest_command.py
