[tool.poetry]
name = "EpiSquad"
version = "1.0.0"
description = "Calendar bot time management tool"
authors = [ "Pierre Braud" ]

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.3.2"

[tool.poetry.scripts]
episquad = "episquad.main:main"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
